# wave-network

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPROVEMENTS.md  LICENSE  README.md  diagnostic.py  export_onnx.py  infer.py  prepare_dataset.py  pyproject.toml  requirements.txt  test_wave_network.py  train.py  train_ag_news.py  train_audio.py  train_dbpedia.py  train_glue.py  train_imdb.py  train_vision.py  visualize_trained_audio.py  visualize_wave.py  wave_attention.py  wave_network.py  wave_network_deep.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  audio.py  glue.py  inference_speed.py  plot_inference_results.py  vision.py
configs/ablations/: architecture.yaml  model_comparison.yaml  wave_ops.yaml
configs/sweeps/: hyperparameter_sweep.yaml
data/results/: fnet_cola.json  fnet_mrpc.json  fnet_qnli.json  fnet_stsb.json  wave_network_mnli.json  wave_network_qnli.json  wave_network_stsb.json  wave_vision_2d_cifar10.json  wave_vision_2d_cifar100.json  wave_vision_base_cifar10.json  wave_vision_cifar10.json
demo/: index.html  wave_audio_tiny.onnx  wave_audio_tiny.onnx.data
docs/: ANALYSIS.md  REVIEW_SUMMARY.md  benchmarks.md  vision_results.md
experiments/: __init__.py  ablation_runner.py  config_manager.py
glue_results/: fnet_mnli.json  fnet_qqp.json  fnet_rte.json  fnet_sst2.json  wave_network_cola.json  wave_network_mrpc.json  wave_network_qqp.json  wave_network_rte.json  wave_network_sst2.json
models/: __init__.py  fnet.py  wave_audio.py  wave_vision.py  wave_vision_2d.py  wave_vision_hybrid.py
tests/: conftest.py
tests/unit/: test_audio_benchmark.py  test_fnet.py  test_glue.py  test_vision_benchmark.py  test_wave_audio.py  test_wave_network.py  test_wave_vision.py
