[project]
name = "wave-network"
version = "0.2.0"
description = "Wave Network: An Ultra-Small Language Model using frequency-domain operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Wave Network Contributors"}
]
keywords = ["nlp", "deep-learning", "language-model", "pytorch", "wave-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "transformers>=4.30",
    "wandb>=0.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "ruff>=0.1",
    "black>=23.9",
    "mypy>=1.5",
    "types-PyYAML>=6.0",
]
benchmark = [
    "memory-profiler>=0.61",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
glue = [
    "datasets>=2.14",
    "evaluate>=0.4",
]
ner = [
    "seqeval>=1.2",
]
seq2seq = [
    "sacrebleu>=2.3",
]
all = [
    "wave-network[dev,benchmark,glue,ner,seq2seq]",
]

[project.urls]
Repository = "https://github.com/kevinraymond/wave-network"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "benchmarks*", "experiments*"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "experiments/*",
    "benchmarks/*",
    "scripts/*",
    "*.py",  # Exclude root level scripts from coverage initially
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

# Ruff configuration (fast Python linter)
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["models", "benchmarks", "experiments"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "experiments/",
]
